src/test/ui/cross/cross-file-errors/main.stderr
error: expected expression, found reserved identifier `_`
  --> $DIR/underscore.rs:8:9
   |
LL |         _
   |         ^ expected expression
   | 
  ::: $DIR/main.rs:5:5
   |
LL |     underscore!();
   |     -------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

