src/test/ui/cross/cross-file-errors/main.rs
#[macro_use]
mod underscore;

fn main() {
    underscore!();
    //~^ ERROR expected expression, found reserved identifier `_`
}
